--- a/OCamlWithEffects/lib/dune
+++ b/OCamlWithEffects/lib/dune
@@ -1,9 +1,9 @@
 (library
  (name ocaml_with_effects_lib)
  (public_name OCamlWithEffects.Lib)
- (modules Parser Ast)
+ (modules Parser Ast Type Inferencer)
  (libraries base angstrom)
  (preprocess
-  (pps ppx_deriving.show))
+  (pps ppx_deriving.show ppx_deriving.eq))
  (instrumentation
   (backend bisect_ppx)))
