--- a/OCamlWithEffects/lib/dune
+++ b/OCamlWithEffects/lib/dune
@@ -3,7 +3,16 @@
 (library
  (name ocaml_with_effects_lib)
  (public_name OCamlWithEffects.Lib)
- (modules Parser Ast Type Inferencer)
+ (modules
+  Parser
+  Ast
+  Typedtree
+  Interpreter
+  Values
+  Inferencer
+  Errors
+  Pprint
+  Run)
  (libraries base angstrom)
  (preprocess
   (pps ppx_deriving.show ppx_deriving.eq))
