Implement inptup/output, fix bugs with inferencer, add parsers errors

--- a/OCamlWithEffects/lib/dune
+++ b/OCamlWithEffects/lib/dune
@@ -4,8 +4,10 @@
  (name ocaml_with_effects_lib)
  (public_name OCamlWithEffects.Lib)
  (modules
-  Parser
   Ast
+  Parser
+  Pprintp
+  Errorsp
   Typedtree
   Interpreter
   Errorsi
