--- a/OCamlWithEffects/lib/dune
+++ b/OCamlWithEffects/lib/dune
@@ -7,16 +7,16 @@
   Ast
   Auxiliary
   Parser
-  Pprintp
-  Errorsp
+  Parser_errors
+  Parser_pprint
   Typedtree
-  Interpreter
-  Errorsi
-  Pprinti
-  Values
   Inferencer
-  Errors
-  Pprint
+  Inf_errors
+  Inf_pprint
+  Values
+  Interpreter
+  Int_errors
+  Int_pprint
   Run)
  (libraries base angstrom)
  (preprocess
